src/objects/Additional_services__c.object
<CustomObject>
    <fields>
        <fullName>Beer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sauna__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sauna</label>
        <type>Checkbox</type>
    </fields>
    <label>Additional services</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Beer__c</columns>
        <columns>Internet__c</columns>
        <columns>Sauna__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AddServ/{000}</displayFormat>
        <label>Additional services ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>